--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head> 
-<header>
-    colegio estadual cidalia rebello gomes
+<link rel="stylesheet" href="style.css"> 
+<title>C.E. Cidália Rebello Gomes</title>
 </header>
-<body>
-    <img src="download (1).jpeg"
-</body>
-</html>
+</header class="cabeçalho">
+<img cla8ss="logo "src="logo-removebg-preview.png" alt="logo colégio">
+    <h1 class="NOMEDAESCOLA">Colégio Estadual Cidália Rebello Gomes </h1>
+<ul class="lista">
+<li class="inicio">Início</li>
+<li>Nossa História</li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
